# sales-analysis

./: README.md  main.py  pyproject.toml
data/: vendas.csv
scripts/: analyzer.py  data_cleaner.py  data_loader.py  visualize.py
