[project]
name = "sales-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Filizzola",email = "juliofilizzola@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
