[project]
name = "sales-analysis"
version = "0.1.0"
description = "Projeto de análise de vendas usando Pandas e Matplotlib."
authors = [
    {name = "Julio Filizzola",email = "juliofilizzola@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]

[tool.poetry.scripts]
sales-analysis = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
